app/assets/sass/screen.scss
/* ... */
#title-comments, #title-add-comment {
	margin: 2em 0 1em 0;

	i.fa {
		margin-right: 20px;
	}
}

#countLetters {
	margin: 15px 0 0 10px;

	i.fa {
		margin-right: 10px;
	}
}

.comment {
	background: $lightGray;
	padding:15px 15px 10px 15px;
	margin-bottom: 5px;
	border-bottom: 3px solid darken($lightGray, 10%);

	.column {
		float:none;
    	display:inline-block;
    	vertical-align:middle;
    	margin-right:-4px;

		.avatar {
			max-height: 100px;
			@include border-radius(50%);
		}
	}

	.column-avatar {
		border-right: 1px solid darken($lightGray, 10%);
	}

	.comment-info {
		margin-top: 10px;
		@media screen and (max-width: $breakpointSmartphone) {
			font-size: 0.9em;
		}

		.date-comment {
			@media screen and (max-width: $breakpointSmartphone) {
				font-size: 0.9em;
				margin-top: 3px;
			}
		}

		.link-author-name {
			color: darken($lightGray, 50%);
			font-family: 'Titillium Web', sans-serif;
			font-weight: 700;
			text-decoration: none;
			float: right;
			background:transparent;
			padding: 2px 5px;
			letter-spacing: 1px;
		}

		span.link-author-name:hover {
			cursor: default;
		}

		a.link-author-name:hover {
			background: white;
		}
	}
}

#user-profile {
	> h2 {
		margin-bottom: 15px;
	}

	> .alert-info {
		margin-bottom: 3em;
	}

	#profile-info {
		h2 {
			color: $topbarColor;
			font-weight: 700;
			text-transform: uppercase;
			font-family: 'Titillium Web', sans-serif;
			margin: 0 0 1em 0;
			font-size: 1.4em;
			@include hyphens(auto);
			@media screen and (max-width: $breakpointSmartphone) {
				font-size: 1.6em;
			}
		}

		.avatar-container {
			@media screen and (max-width: $breakpointSmartphone) {
				float:none;
	    		display:inline-block;
	    		vertical-align:middle;
	    		margin-right:-4px;
			}
			.avatar {
				margin: 0 auto;
				max-height: 135px;
				@include border-radius(50%);
			}
		}

		.user-info {
			line-height: 2em;
			@media screen and (max-width: $breakpointSmartphone) {
				float:none;
	    		display:inline-block;
	    		vertical-align:middle;
	    		margin-right:-4px;
			}

			i.fa {
				margin-right: 10px;
			}

			img.mustach {
				width: 18px;
				margin-left: -6px;
				margin-right: 7px;
			}
		}

		> .row {
			.stats-counter {
				@media screen and (max-width: $breakpointSmartphone) {
					margin-top: 1em;
				}

				.col-md-3 {
					@media screen and (max-width: $breakpointSmartphone) {
						margin-bottom: 1em;
					}
					font-family: 'Titillium Web', sans-serif;
					text-align: center;

					a {
						color: black;
						@include element-transition;
					}

					a:hover {
						color: $lightBlue;
						text-decoration: none;
					}

					.description {
						display: block;
						text-transform: uppercase;
						margin-bottom: .2em;
						font-size: .9em;
					}

					.counter {
						font-weight: 700;
						font-size: 1.2em;
					}

					.active {
						width: 70%;
						background: $lightBlue;
						height: 3px;
						display: block;
						margin: .5em auto 0 auto;
					}

					.unactive {
						background: transparent;
						height: 3px;
						display: block;
						margin: .5em auto 0 auto;
					}
				}
			}

			.text-center {
				padding-left: 0;
				padding-right: 0;
			}

			.about-me {
				margin: 2em 0 1.5em 0;
				@media screen and (max-width: $breakpointSmartphone) {
					margin-top: .5em;
				}
			}
		}
	}

	> .btn-group {
		display: flex;
		justify-content: space-between;
		margin: .5em 0 2em 0;

		button {
			@media screen and (max-width: $breakpointSmartphone) {
				padding: 5px 5px;
				font-size: 13px;
				margin-left: -4px;
			}

			i.fa {
				margin-right: 10px;
				@media screen and (max-width: $breakpointSmartphone) {
					margin-right: 0px;
				}
			}
		}
	}

	.quote {
		padding: 15px 15px 10px 15px;
		color: white;
		font-size: 1em;
		line-height: 1.3em;
		margin-bottom: 15px;

		.quotes-info {
			.social-buttons a {
				width: 19px;
				height: 19px;
			}

			.link-author-profile {
				@media screen and (max-width: $breakpointSmartphone) {
					margin-top: -2px;
				}
			}
		}

	}

	.comment {
		border-bottom: none;
		margin-bottom: 0;
	}

	.comment-quote-info {
		text-overflow: ellipsis;
		overflow: hidden;
		white-space: nowrap;
		margin-left: 2em;
		margin-bottom: 1em;
		border-left: 5px solid darken($lightBlue, 10%);
		background: $lightBlue;
		color: white;
		padding: 5px 10px;

		@include link-white-on-blue;
	}

	#welcome-profile {
		margin: 2em 0 3em 0;

		h3 {
			color: $lightBlue;
		}

		.row {
			@media screen and (min-width: $breakpointSmartphone) {
				margin-top: 1.5em;
				margin-bottom: 2.5em;
			}

			.col-xs-12 {
				@media screen and (max-width: $breakpointSmartphone) {
					margin-top: .5em;
					margin-bottom: .5em;
				}
			}
		}

		@include link-orange-on-white;
	}
}

#require-log-buttons {
	margin: 30px -15px;

	.col-sm-6:first-child {
		@media screen and (max-width: $breakpointSmartphone) {
			margin-bottom: 30px;
		}
	}
}
/* ... */

